[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvmfleet-bmc-adapters"
version = "0.1.0"
description = "Production-grade async Python client for multi-vendor BMC Redfish access (Dell iDRAC, HPE iLO, Supermicro, Lenovo XCC, OpenBMC). Powers KVM Fleet's hosted access-governance platform."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["bmc", "redfish", "idrac", "ilo", "supermicro", "lenovo-xcc", "openbmc", "ipmi", "out-of-band"]
authors = [
  { name = "KVM Fleet", email = "support@kvmfleet.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Hardware",
  "Topic :: System :: Systems Administration",
  "Framework :: AsyncIO",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://github.com/KVMFleet/bmc-adapters"
Repository = "https://github.com/KVMFleet/bmc-adapters"
Issues = "https://github.com/KVMFleet/bmc-adapters/issues"
"KVM Fleet" = "https://kvmfleet.io"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["bmc_adapters"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
