[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvmfleet-bmc-adapters"
version = "0.4.0"
description = "Async Python library for out-of-band server management — Redfish, IPMI, smart PDUs (APC / Eaton / Raritan), and Wake-on-LAN. Vendor quirks absorbed."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
  "bmc", "redfish", "ipmi", "pdu", "wake-on-lan", "wol", "snmp",
  "idrac", "ilo", "supermicro", "lenovo-xcc", "openbmc",
  "apc", "eaton", "raritan", "out-of-band",
]
authors = [
  { name = "KVM Fleet", email = "support@kvmfleet.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Hardware",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Framework :: AsyncIO",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://github.com/KVMFleet/bmc-adapters"
Repository = "https://github.com/KVMFleet/bmc-adapters"
Issues = "https://github.com/KVMFleet/bmc-adapters/issues"
"KVM Fleet" = "https://kvmfleet.io"

[project.optional-dependencies]
ipmi = [
  "pyghmi>=1.6.0",
]
pdu = [
  "pysnmp>=6.2,<7",
]
ssh = [
  "asyncssh>=2.14",
]
all = [
  "pyghmi>=1.6.0",
  "pysnmp>=6.2,<7",
  "asyncssh>=2.14",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["bmc_adapters"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
